--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = counternet
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
 user = birkhoffg
-description = A description of your project
-keywords = some keywords
+description = End-to-end training of prediction and counterfactual explanation
+keywords = XAI, explainability, interpretability, counterfactual explanation
 author = BirkhoffG
-author_email = birkhoffghz@gmail.com
-copyright = Birkhoff Guo
+author_email = hangz@psu.edu
+copyright = Hangzhi Guo
 branch = master
 version = 0.0.1
 min_python = 3.6
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = pytorch_lightning>=1.1.0 torch>=1.6.0 matplotlib scikit-learn pandas nbdev>=1.0.10,<2
+requirements = pytorch_lightning>=1.3.0 torch>=1.6.0 matplotlib scikit-learn pandas nbdev>=1.0.10,<2 test_tube torchmetrics
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
