--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = pytorch_lightning>=1.3.0 torch>=1.6.0 matplotlib scikit-learn pandas nbdev>=1.0.10,<2 test_tube torchmetrics
+requirements = pytorch_lightning>=1.3.0 torch>=1.6.0 matplotlib scikit-learn pandas nbdev>=1.0.10,<2 test_tube torchmetrics pip install tabulate
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
